objects/Acm_Collateral_Status__c.object
<CustomObject>
    <fields>
        <fullName>Collateral_Id__c</fullName>
        <description>Collateral Id</description>
        <inlineHelpText>Collateral Id</inlineHelpText>
        <label>Collateral Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Message__c</fullName>
        <label>Collateral Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_No__c</fullName>
        <label>Collateral No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Owner__c</fullName>
        <label>Collateral Owner</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral</label>
        <referenceTo>Collateral__c</referenceTo>
        <relationshipLabel>Acm Collateral Statuses</relationshipLabel>
        <relationshipName>Acm_Collateral_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was report email sent</description>
        <inlineHelpText>Was report email sent</inlineHelpText>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of collateral</description>
        <inlineHelpText>Status of collateral</inlineHelpText>
        <label>Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hasError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>has Errors</label>
        <type>Checkbox</type>
    </fields>
    <label>Acm Collateral Status</label>
    <nameField>
        <label>Collateral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Acm Collateral Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>